# simple_6502rs

./: .gitignore  Cargo.toml  README.md  start_server.sh
docs/: index.html  simple_6502rs.js  simple_6502rs.wasm  simple_6502rs_bg.wasm
src/: app.rs  emulator.rs  lib.rs  main.rs
src/emulator/: bus.rs  cpu.rs  disassembler.rs  instruction.rs  lib.rs  memory.rs  test.rs
