[package]
name = "simple_6502rs"
version = "0.1.0"
authors = ["Hamza Butt <zahamza05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# emulator dependencies
bitflags = "1.0"
lazy_static = "1.4.0"
hex = "0.4"

# gui dependency
eframe = "0.9.0" # Gives us egui, epi and web+native backends


[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests